--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "npx nodemon",
         "build": "npx tsc",
+        "start": "node dist",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
